name:                redis-io
version:             0.1
synopsis:            Yet another redis client
license:             OtherLicense
license-file:        LICENSE
author:              Toralf Wittner
maintainer:          Toralf Wittner <tw@dtex.org>
copyright:           (c) 2014 Toralf Wittner
homepage:            https://github.com/twittner/redis-io/
bug-reports:         https://github.com/twittner/redis-io/issues
stability:           experimental
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

description:
    Yet another redis client.

source-repository head
    type:             git
    location:         git://github.com/twittner/redis-io.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Network.Redis.IO

    other-modules:
        Network.Redis.IO.Client
        Network.Redis.IO.Connection
        Network.Redis.IO.Settings
        Network.Redis.IO.Timeouts
        Network.Redis.IO.Types

    build-depends:
        async          >= 2.0    && < 2.1
      , attoparsec     >= 0.11   && < 0.13
      , base           >= 4.5    && < 5.0
      , bytestring     >= 0.9    && < 0.11
      , containers     == 0.5.*
      , exceptions     == 0.6.*
      , free           == 4.9
      , mtl            == 2.1.*
      , network        >= 2.5    && < 2.6
      , redis-resp     == 0.1.*
      , resource-pool  >= 0.2    && < 0.3
      , time           == 1.4.*
      , transformers   >= 0.3    && < 0.5
      , tinylog        == 0.10.*

benchmark redis-io-bench
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    main-is:          Bench.hs
    hs-source-dirs:   bench
    ghc-options:      -Wall -O2 -fwarn-tabs
    build-depends:
        base
      , criterion   >= 1.0.0.2 && < 1.1
      , hedis       >= 0.6
      , redis-io
      , redis-resp
      , tinylog
